various spacing issues

--- a/rulesets/output/hs-physics.css
+++ b/rulesets/output/hs-physics.css
@@ -1325,7 +1325,7 @@
   move-to: bCaption; }
 :pass(6) [data-type="chapter"] :not(table) > table:not(.unnumbered)::before {
   container: span;
-  content: counter(chapter) "." counter(table);
+  content: counter(chapter) "." counter(table) " ";
   class: os-number;
   move-to: bCaption; }
 :pass(6) [data-type="chapter"] :not(table) > table:not(.unnumbered) caption {
@@ -1354,7 +1354,7 @@
   move-to: bCaption; }
 :pass(6) .appendix :not(table) > table:not(.unnumbered)::before {
   container: span;
-  content: counter(appendix,upper-alpha) "." counter(table);
+  content: counter(appendix,upper-alpha) "." counter(table) " ";
   class: os-number;
   move-to: bCaption; }
 :pass(6) .appendix :not(table) > table:not(.unnumbered) caption {
@@ -1383,7 +1383,7 @@
   move-to: bCaption; }
 :pass(6) [data-type="chapter"] :not(figure) > figure:not(.unnumbered)::before {
   container: span;
-  content: counter(chapter) "." counter(figure);
+  content: counter(chapter) "." counter(figure) " ";
   class: os-number;
   move-to: bCaption; }
 :pass(6) [data-type="chapter"] :not(figure) > figure:not(.unnumbered) figcaption {
@@ -1412,7 +1412,7 @@
   move-to: bCaption; }
 :pass(6) .appendix :not(figure) > figure:not(.unnumbered)::before {
   container: span;
-  content: counter(appendix,upper-alpha) "." counter(figure);
+  content: counter(appendix,upper-alpha) "." counter(figure) " ";
   class: os-number;
   move-to: bCaption; }
 :pass(6) .appendix :not(figure) > figure:not(.unnumbered) figcaption {
