--- a/rulesets/output/statistics.css
+++ b/rulesets/output/statistics.css
@@ -1054,7 +1054,7 @@ Formula Review page
   move-to: bCaption; }
 :pass(6) [data-type="chapter"] :not(table) > table:not(.unnumbered)::before {
   container: span;
-  content: counter(chapter) "." counter(table);
+  content: counter(chapter) "." counter(table) " ";
   class: os-number;
   move-to: bCaption; }
 :pass(6) [data-type="chapter"] :not(table) > table:not(.unnumbered) caption [data-type="title"] {
@@ -1104,7 +1104,7 @@ Formula Review page
   move-to: bCaption; }
 :pass(6) [data-type="chapter"] :not(figure) > figure:not(.unnumbered)::before {
   container: span;
-  content: counter(chapter) "." counter(figure);
+  content: counter(chapter) "." counter(figure) " ";
   class: os-number;
   move-to: bCaption; }
 :pass(6) [data-type="chapter"] :not(figure) > figure:not(.unnumbered) figcaption {
@@ -1129,7 +1129,7 @@ Formula Review page
   move-to: bCaption; }
 :pass(6) .appendix :not(figure) > figure:not(.unnumbered)::before {
   container: span;
-  content: counter(appendix,upper-alpha) "." counter(figure);
+  content: counter(appendix,upper-alpha) "." counter(figure) " ";
   class: os-number;
   move-to: bCaption; }
 :pass(6) .appendix :not(figure) > figure:not(.unnumbered) figcaption {
